@@ -1,3 +1,4 @@
+I. Importing
 http://stackoverflow.com/questions/13073605/how-do-i-make-egit-respect-multi-project-git-repository
 0. git clone into this folder
 1. File, Import...
@@ -8,7 +9,8 @@ http://stackoverflow.com/questions/13073605/how-do-i-make-egit-respect-multi-pro
 6. Import existing projects, Next>
 7. Check the checkboxes beside the projects you want and click Finish
 
-
-1. check folders existing 'xtend-gen' and 'src-gen'
- - run launchMeBefore.bat
-2. create mwe2 workflow for grammar (launch .mwe2) and ignore errors
+II. Compiling & Launching
+1. run launchMeBefore.bat for create folders existing 'xtend-gen' and 'src-gen'
+2. ignore errors create mwe2 workflow for grammar (launch .mwe2)
+3. reset the workspace
+4. enlarge MaxPermSize: add VM argument '-XX:MaxPermSize=512m'
